--- a/gaming/index.html
+++ b/gaming/index.html
@@ -9,13 +9,21 @@
 </head>
 <body class="bg-base-200 min-h-screen">
 
-    <div class="navbar bg-base-100 shadow-lg px-4 md:px-20">
-        <div class="flex-1">
-            <a href="../index.html" class="text-2xl font-bold text-primary">
-                DEAL<span class="text-secondary">HUNTER</span>
-            </a>
-        </div>
+<div class="navbar bg-base-100 shadow-lg px-4 md:px-20">
+    <div class="flex-1">
+        <a href="./index.html" class="text-2xl font-bold text-primary">
+            DEAL<span class="text-secondary">HUNTER</span>
+        </a>
     </div>
+
+    <div class="flex gap-2">
+        <a href="./alle/" class="btn btn-sm btn-outline btn-primary">Alle Deals</a>
+        <a href="./gaming/" class="btn btn-sm btn-outline btn-primary">Gaming</a>
+        <a href="./kueche/" class="btn btn-sm btn-outline btn-primary">Küche</a>
+        <a href="./technik/" class="btn btn-sm btn-outline btn-primary">Technik</a>
+    </div>
+</div>
+
 
     <main class="container mx-auto p-6">
         <h1 class="text-3xl font-bold mb-6 text-center">Gaming Deals</h1>
