--- a/gaming/index.html
+++ b/gaming/index.html
@@ -8,20 +8,20 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-base-200 min-h-screen">
-
+    
 <div class="navbar bg-base-100 shadow-lg px-4 md:px-20">
     <div class="flex-1">
-        <a href="./index.html" class="text-2xl font-bold text-primary">
+        <a href="../index.html" class="text-2xl font-bold text-primary">
             DEAL<span class="text-secondary">HUNTER</span>
         </a>
     </div>
+</div>
 
-    <div class="flex gap-2">
-        <a href="./alle/" class="btn btn-sm btn-outline btn-primary">Alle Deals</a>
-        <a href="./gaming/" class="btn btn-sm btn-outline btn-primary">Gaming</a>
-        <a href="./kueche/" class="btn btn-sm btn-outline btn-primary">Küche</a>
-        <a href="./technik/" class="btn btn-sm btn-outline btn-primary">Technik</a>
-    </div>
+<div class="flex flex-wrap gap-4 mb-10 justify-center mt-6">
+    <a href="../alle/" class="btn btn-outline btn-primary">Alle Deals</a>
+    <a href="../gaming/" class="btn btn-outline btn-primary">Gaming</a>
+    <a href="../kueche/" class="btn btn-outline btn-primary">Küche</a>
+    <a href="../technik/" class="btn btn-outline btn-primary">Technik</a>
 </div>
 
 
