--- a/technik/index.html
+++ b/technik/index.html
@@ -21,8 +21,9 @@
     <a href="../alle/" class="btn btn-outline btn-primary">Alle Deals</a>
     <a href="../gaming/" class="btn btn-outline btn-primary">Gaming</a>
     <a href="../kueche/" class="btn btn-outline btn-primary">Küche</a>
-    <a href="../technik/" class="btn btn-primary">Technik</a>
+    <a href="../technik/" class="btn btn-primary btn-active">Technik</a>
 </div>
+
   
     <main class="container mx-auto p-6">
         <h1 class="text-3xl font-bold mb-6 text-center">Technik Deals</h1>
