--- a/alle/index.html
+++ b/alle/index.html
@@ -16,14 +16,13 @@
         </a>
     </div>
 </div>
-
+    
 <div class="flex flex-wrap gap-4 mb-10 justify-center mt-6">
-    <a href="../alle/" class="btn btn-outline btn-primary">Alle Deals</a>
+    <a href="../alle/" class="btn btn-primary btn-active">Alle Deals</a>
     <a href="../gaming/" class="btn btn-outline btn-primary">Gaming</a>
     <a href="../kueche/" class="btn btn-outline btn-primary">Küche</a>
     <a href="../technik/" class="btn btn-outline btn-primary">Technik</a>
 </div>
-
 
     <main class="container mx-auto p-6">
         <h1 class="text-3xl font-bold mb-6 text-center">Alle Deals</h1>
