--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Automatische Weiterleitung zu /alle/ -->
-    <meta http-equiv="refresh" content="0; url=/alle/">
+    <!-- Automatische Weiterleitung zu /dealsgalaxy/alle/ -->
+    <meta http-equiv="refresh" content="0; url=/dealsgalaxy/alle/">
 
     <title>Deals</title>
 </head>
