--- a/alle/index.html
+++ b/alle/index.html
@@ -18,7 +18,7 @@
         </a>
     </div>
 
-<div class="absolute left-1/2 -translate-x-1/2">
+<div class="absolute left-1/2 -translate-x-1/2 w-full px-4 max-w-[40rem]">
     <div class="relative">
         <input 
             id="search-input"
