--- a/alle/index.html
+++ b/alle/index.html
@@ -10,7 +10,7 @@
 <body class="bg-base-200 min-h-screen">
 
 <!-- NAVBAR -->
-<div class="navbar bg-base-100 shadow-lg px-4 md:px-20 relative">
+<div class="navbar bg-base-100 shadow-lg px-4 sm:px-6 md:px-20 relative">
 
     <div class="flex-1">
         <a href="../index.html" class="text-3xl font-bold text-primary tracking-wide">
