--- a/alle/index.html
+++ b/alle/index.html
@@ -18,19 +18,18 @@
         </a>
     </div>
 
-<div class="absolute left-1/2 -translate-x-1/2 w-full px-4 max-w-[40rem]">
-    <div class="relative">
-        <input 
-            id="search-input"
-            type="text" 
-            placeholder="Suche nach Angeboten…" 
-           class="input input-bordered h-12 text-lg w-full max-w-[40rem] rounded-xl shadow-md pr-12"
-        />
-        <span class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-400 text-xl">🔍</span>
+    <!-- Suchleiste (perfekt responsive) -->
+    <div class="absolute left-1/2 -translate-x-1/2 w-full px-4 max-w-[40rem]">
+        <div class="relative">
+            <input 
+                id="search-input"
+                type="text" 
+                placeholder="Suche nach Angeboten…" 
+                class="input input-bordered h-12 text-lg w-full max-w-[40rem] rounded-xl shadow-md pr-12"
+            />
+            <span class="absolute right-4 top-1/2 -translate-y-1/2 text-gray-400 text-xl">🔍</span>
+        </div>
     </div>
-</div>
-
-
 
     <div class="flex-1"></div>
 </div>
