--- a/alle/index.html
+++ b/alle/index.html
@@ -44,7 +44,7 @@
 
 <main class="container mx-auto p-6">
 
-    <!-- Überschrift + Dropdown (mobil sauber untereinander) -->
+    <!-- Überschrift + Dropdown -->
     <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 mb-8">
         <h1 class="text-4xl font-bold">Alle Deals</h1>
 
