--- a/alle/index.html
+++ b/alle/index.html
@@ -41,7 +41,7 @@
 <body class="bg-base-200 min-h-screen">
 
 <!-- NAVBAR -->
-<div class="navbar bg-base-100 shadow-lg px-4 sm:px-6 md:px-20 flex flex-col gap-3 relative">
+<div class="navbar bg-base-100 shadow-lg px-4 sm:px-6 md:px-20 flex items-center relative">
     
 <!-- Logo als Bild -->
 <div class="w-full flex items-center">
