--- a/alle/index.html
+++ b/alle/index.html
@@ -35,6 +35,13 @@
             max-width: 40rem;
         }
     }
+        
+    /* Logo nur auf Smartphones mittig */
+@media (max-width: 767px) {
+    .navbar .w-full {
+        justify-content: center;
+    }
+}
     </style>
 </head>
 
