--- a/alle/index.html
+++ b/alle/index.html
@@ -45,7 +45,7 @@
 <div class="navbar bg-base-100 shadow-lg px-4 sm:px-6 md:px-20 flex items-center relative">
     
 <!-- Logo als Bild -->
-<div class="w-full flex items-center">
+<div class="w-full flex items-center justify-center md:justify-start">
     <a href="../index.html">
         <img src="../images/miodeals-logo.png" alt="MioDeals Logo" class="h-16" />
     </a>
