--- a/alle/index.html
+++ b/alle/index.html
@@ -42,18 +42,17 @@
 <body class="bg-base-200 min-h-screen">
 
 <!-- NAVBAR -->
-<div class="navbar bg-base-100 shadow-lg px-4 sm:px-6 md:px-20 flex items-center relative">
-    
-<!-- Logo als Bild -->
-<div class="w-full flex items-center justify-center md:justify-start">
-    <a href="../index.html">
-        <img src="../images/miodeals-logo.png" alt="MioDeals Logo" class="h-16" />
-    </a>
-</div>
+<div class="navbar bg-base-100 shadow-lg px-4 sm:px-6 md:px-20 flex flex-col md:flex-row items-center relative">
 
+    <!-- Logo -->
+    <div class="w-full flex justify-center md:justify-start">
+        <a href="../index.html">
+            <img src="../images/miodeals-logo.png" alt="MioDeals Logo" class="h-16" />
+        </a>
+    </div>
 
-    <!-- Suchleiste -->
-    <div class="search-wrapper px-4">
+    <!-- Suchfeld -->
+    <div class="search-wrapper px-4 w-full md:w-auto">
         <div class="relative w-full">
             <input 
                 id="search-input"
