--- a/alle/index.html
+++ b/alle/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MioDeals – Top Angebote</title>
+    <title>MioDeals – Deine Deal-Plattform</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -11,12 +11,10 @@
             daisyui: {
                 themes: [{
                     miotheme: {
-                        "primary": "#1E293B",      /* Dunkles Blau/Grau für Text-Logo & Buttons */
-                        "secondary": "#FB923C",    /* Orange für Rabatte */
-                        "accent": "#38BDF8",
-                        "neutral": "#1F2937",
-                        "base-100": "#ffffff",
-                        "base-200": "#F1F5F9",    /* Heller Hintergrund wie im Bild */
+                        "primary": "#1E293B",      /* Dunkles Blau für Buttons */
+                        "secondary": "#FB923C",    /* Orange für Rabatt-Badges */
+                        "base-100": "#ffffff",    /* Kartenhintergrund */
+                        "base-200": "#F8FAFC",    /* Heller Seitenhintergrund */
                     },
                 }],
             },
@@ -24,8 +22,8 @@
     </script>
     <style>
         .line-clamp-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
-        .product-card { transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
-        .product-card:hover { transform: translateY(-5px); shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1); }
+        .product-card { transition: all 0.3s ease; }
+        .product-card:hover { transform: translateY(-4px); box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1); }
     </style>
 </head>
 <body class="bg-base-200 min-h-screen flex flex-col font-sans">
@@ -34,63 +32,50 @@
     <div class="navbar container mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4">
         <div class="flex-1">
             <a href="../index.html" class="text-3xl font-black tracking-tighter text-slate-800">
-                Mio<span class="text-primary">Deals</span>
+                Mio<span class="text-blue-600">Deals</span>
             </a>
         </div>
-
         <div class="flex-none w-full lg:w-1/2 max-w-xl">
             <div class="relative">
-                <input id="search-input" type="text" placeholder="Angebote durchsuchen..." 
-                       class="input input-bordered w-full rounded-md bg-slate-50 focus:bg-white pr-12 h-12 border-slate-200" />
-                <div class="absolute right-4 top-1/2 -translate-y-1/2 text-slate-400">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
-                </div>
+                <input id="search-input" type="text" placeholder="Angebote suchen..." 
+                       class="input input-bordered w-full rounded-md bg-slate-50 focus:bg-white pr-12 h-12" />
+                <div class="absolute right-4 top-1/2 -translate-y-1/2 text-slate-400">⌕</div>
             </div>
         </div>
-
-        <div class="flex-1 hidden lg:flex justify-end gap-4 text-sm font-medium text-slate-500">
-            <span>Support</span>
-            <span>Partner</span>
-        </div>
+        <div class="flex-1 hidden lg:block"></div>
     </div>
-
-    <nav class="bg-slate-50 border-t border-b overflow-x-auto">
+    <nav class="bg-slate-50 border-t border-b overflow-x-auto whitespace-nowrap">
         <div class="container mx-auto flex justify-center gap-2 py-3 px-4">
-            <a href="../alle/" class="btn btn-primary btn-sm rounded shadow-sm px-6">Alle Deals</a>
-            <a href="../gaming/" class="btn btn-ghost btn-sm rounded px-6 text-slate-600">Gaming</a>
-            <a href="../kueche/" class="btn btn-ghost btn-sm rounded px-6 text-slate-600">Küche</a>
-            <a href="../technik/" class="btn btn-ghost btn-sm rounded px-6 text-slate-600">Technik</a>
+            <a href="../alle/" class="btn btn-primary btn-sm rounded px-6">Alle Deals</a>
+            <a href="../gaming/" class="btn btn-ghost btn-sm rounded px-6">Gaming</a>
+            <a href="../kueche/" class="btn btn-ghost btn-sm rounded px-6">Küche</a>
+            <a href="../technik/" class="btn btn-ghost btn-sm rounded px-6">Technik</a>
         </div>
     </nav>
 </header>
 
-<main class="container mx-auto px-2 md:px-4 py-10 flex-grow">
-    <div class="flex flex-col md:flex-row md:items-center justify-between mb-10 gap-4 px-2">
-        <div class="flex gap-2">
-             <button class="btn btn-sm btn-square bg-slate-800 text-white border-none">#</button>
-             <h1 class="text-2xl font-bold text-slate-800">Top Angebote</h1>
-        </div>
-        
-        <select id="sort-select" class="select select-bordered select-sm rounded bg-white border-slate-200 w-full md:w-auto">
-            <option value="empfohlen">Sortieren: Empfohlen</option>
+<main class="container mx-auto px-2 md:px-4 py-8 flex-grow">
+    <div class="flex flex-col md:flex-row md:items-center justify-between mb-8 gap-4 px-2">
+        <h1 class="text-2xl font-bold text-slate-800 tracking-tight">Top Angebote</h1>
+        <select id="sort-select" class="select select-bordered select-sm rounded bg-white">
+            <option value="empfohlen">Empfohlen</option>
             <option value="price-asc">Preis: Aufsteigend</option>
             <option value="price-desc">Preis: Absteigend</option>
-            <option value="discount-desc">Rabatt: Höchster %</option>
+            <option value="discount-desc">Rabatt %</option>
         </select>
     </div>
 
-    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8">
-        </div>
+    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8"></div>
 
-    <div id="pagination" class="flex justify-center items-center gap-2 py-16"></div>
+    <div id="pagination" class="flex justify-center items-center gap-2 py-12"></div>
 </main>
 
-<footer class="bg-white border-t py-12 mt-auto">
-    <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
-        <p class="text-sm text-slate-400 font-medium">© 2025 MioDeals – Alle Rechte vorbehalten</p>
-        <div class="flex gap-10 text-sm font-bold text-slate-600">
-            <a href="../impressum.html" class="hover:text-primary transition-colors">Impressum</a>
-            <a href="../datenschutz.html" class="hover:text-primary transition-colors">Datenschutz</a>
+<footer class="bg-white border-t py-10 mt-auto">
+    <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4 text-sm font-medium text-slate-400">
+        <p>© 2025 MioDeals – Alle Rechte vorbehalten</p>
+        <div class="flex gap-8 text-slate-600">
+            <a href="../impressum.html">Impressum</a>
+            <a href="../datenschutz.html">Datenschutz</a>
         </div>
     </div>
 </footer>
