--- a/alle/index.html
+++ b/alle/index.html
@@ -20,38 +20,49 @@
             },
         }
     </script>
+
     <style>
         .line-clamp-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
         .product-card { transition: all 0.3s ease; }
         .product-card:hover { transform: translateY(-5px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1); }
-        
-        /* Logo: Spezielles Styling für den orangen i-Punkt und das o */
-        .logo-font { font-weight: 900; letter-spacing: -0.05em; color: #1E293B; }
-        .dot-orange { position: relative; display: inline-block; }
-        .dot-orange::after { 
-            content: "."; position: absolute; top: -0.55em; left: 0.12em; 
-            color: #FB923C; font-size: 1.3em; line-height: 0;
-        }
+
+        /* Logo */
+        .logo-font { font-weight: 900; letter-spacing: -0.05em; color: #2c5528; }
+        .dot-orange::after { color: #FB923C; }
         .text-orange-mio { color: #FB923C; }
+
+        /* Pagination ausgewählt */
+        .pagination-active {
+            background-color: #2c5528 !important;
+            border-color: #2c5528 !important;
+            color: white !important;
+        }
+
+        /* Buttons "Zum Angebot" */
+        .btn-primary {
+            background-color: #2c5528 !important;
+            border-color: #2c5528 !important;
+        }
     </style>
 </head>
+
 <body class="bg-base-200 min-h-screen flex flex-col font-sans">
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
     <div class="navbar container mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4">
 
         <div class="flex-1">
-    <a href="../index.html" class="text-3xl font-[900] tracking-tighter text-[#1E293B] select-none inline-flex items-center">
-        M
-        <span class="relative inline-block">
-            i
-            <span class="absolute top-[-0.45em] left-0 w-full text-center text-[#FB923C] leading-[1] select-none">.</span>
-        </span>
-        <span class="text-[#FB923C]">o</span>
-        Deals
-    </a>
-</div>
-        
+            <a href="../index.html" class="text-3xl font-[900] tracking-tighter select-none inline-flex items-center" style="color:#2c5528;">
+                M
+                <span class="relative inline-block" style="color:#2c5528;">
+                    i
+                    <span class="absolute top-[-0.45em] left-0 w-full text-center text-[#FB923C] leading-[1] select-none">.</span>
+                </span>
+                <span class="text-[#FB923C]">o</span>
+                <span style="color:#2c5528;">Deals</span>
+            </a>
+        </div>
+
         <div class="flex-none w-full lg:w-1/2 max-w-xl">
             <div class="relative">
                 <input id="search-input" type="text" placeholder="Angebote durchsuchen..." 
@@ -69,7 +80,7 @@
 
     <nav class="bg-white border-t border-b overflow-x-auto whitespace-nowrap">
         <div class="container mx-auto flex justify-center gap-2 py-3 px-4">
-            <a href="../alle/" class="btn btn-primary btn-sm rounded px-6 shadow-sm">Alle Deals</a>
+            <a href="../alle/" class="btn btn-primary btn-sm rounded px-6 shadow-sm" style="background-color:#2c5528; border-color:#2c5528;">Alle Deals</a>
             <a href="../gaming/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Gaming</a>
             <a href="../kueche/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Küche</a>
             <a href="../technik/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Technik</a>
@@ -81,8 +92,9 @@
     <div class="flex flex-col md:flex-row md:items-center justify-between mb-8 gap-4 px-2">
         <div class="flex items-center gap-2">
             <div class="w-8 h-8 bg-slate-800 rounded flex items-center justify-center text-white font-bold text-xs">#</div>
-            <h1 class="text-2xl font-bold text-slate-800 tracking-tight uppercase">Angebote</h1>
+            <h1 class="text-2xl font-bold tracking-tight uppercase" style="color:#2c5528;">Angebote</h1>
         </div>
+
         <select id="sort-select" class="select select-bordered select-sm rounded bg-white border-slate-200">
             <option value="empfohlen">Sortieren: Empfohlen</option>
             <option value="price-asc">Preis: Aufsteigend</option>
@@ -91,8 +103,7 @@
         </select>
     </div>
 
-    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8">
-        </div>
+    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8"></div>
 
     <div id="pagination" class="flex justify-center items-center gap-2 py-16"></div>
 </main>
@@ -100,9 +111,9 @@
 <footer class="bg-white border-t py-12 mt-auto">
     <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
         <p class="text-sm text-slate-400 font-medium">© 2025 MioDeals – Alle Rechte vorbehalten</p>
-        <div class="flex gap-10 text-sm font-bold text-slate-700">
-            <a href="../impressum.html" class="hover:text-orange-500 transition-colors">Impressum</a>
-            <a href="../datenschutz.html" class="hover:text-orange-500 transition-colors">Datenschutz</a>
+        <div class="flex gap-10 text-sm font-bold">
+            <a href="../impressum.html" class="hover:text-orange-500 transition-colors" style="color:#2c5528;">Impressum</a>
+            <a href="../datenschutz.html" class="hover:text-orange-500 transition-colors" style="color:#2c5528;">Datenschutz</a>
         </div>
     </div>
 </footer>
