--- a/alle/index.html
+++ b/alle/index.html
@@ -11,7 +11,7 @@
             daisyui: {
                 themes: [{
                     miotheme: {
-                        "primary": "#1E293B",
+                        "primary": "#2C5282",
                         "secondary": "#FB923C",
                         "base-100": "#ffffff",
                         "base-200": "#F8FAFC",
