--- a/alle/index.html
+++ b/alle/index.html
@@ -25,7 +25,6 @@
         .product-card { transition: all 0.3s ease; }
         .product-card:hover { transform: translateY(-5px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1); }
         
-        /* Logo: Spezielles Styling für den orangen i-Punkt und das o */
         .logo-font { font-weight: 900; letter-spacing: -0.05em; color: #1E293B; }
         .dot-orange { position: relative; display: inline-block; }
         .dot-orange::after { 
@@ -41,16 +40,16 @@
     <div class="navbar container mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4">
 
         <div class="flex-1">
-    <a href="../index.html" class="text-3xl font-[900] tracking-tighter text-[#1E293B] select-none inline-flex items-center">
-        M
-        <span class="relative inline-block">
-            i
-            <span class="absolute top-[-0.45em] left-0 w-full text-center text-[#FB923C] leading-[1] select-none">.</span>
-        </span>
-        <span class="text-[#FB923C]">o</span>
-        Deals
-    </a>
-</div>
+            <a href="../index.html" class="text-3xl font-[900] tracking-tighter text-[#1E293B] select-none inline-flex items-center">
+                M
+                <span class="relative inline-block">
+                    i
+                    <span class="absolute top-[-0.45em] left-0 w-full text-center text-[#FB923C] leading-[1] select-none">.</span>
+                </span>
+                <span class="text-[#FB923C]">o</span>
+                Deals
+            </a>
+        </div>
         
         <div class="flex-none w-full lg:w-1/2 max-w-xl">
             <div class="relative">
@@ -69,7 +68,10 @@
 
     <nav class="bg-white border-t border-b overflow-x-auto whitespace-nowrap">
         <div class="container mx-auto flex justify-center gap-2 py-3 px-4">
+
+            <!-- Änderung 1: btn-primary nutzt automatisch Primary (#2C5282) -->
             <a href="../alle/" class="btn btn-primary btn-sm rounded px-6 shadow-sm">Alle Deals</a>
+
             <a href="../gaming/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Gaming</a>
             <a href="../kueche/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Küche</a>
             <a href="../technik/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Technik</a>
@@ -91,8 +93,7 @@
         </select>
     </div>
 
-    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8">
-        </div>
+    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8"></div>
 
     <div id="pagination" class="flex justify-center items-center gap-2 py-16"></div>
 </main>
