--- a/alle/index.html
+++ b/alle/index.html
@@ -24,14 +24,6 @@
         .line-clamp-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
         .product-card { transition: all 0.3s ease; }
         .product-card:hover { transform: translateY(-5px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1); }
-        
-        /* Logo: Spezielles Styling für den orangen i-Punkt und das o */
-        .logo-font { font-weight: 900; letter-spacing: -0.05em; color: #1E293B; }
-        .dot-orange { position: relative; display: inline-block; }
-        .dot-orange::after { 
-            content: "."; position: absolute; top: -0.55em; left: 0.12em; 
-            color: #FB923C; font-size: 1.3em; line-height: 0;
-        }
         .text-orange-mio { color: #FB923C; }
     </style>
 </head>
@@ -39,18 +31,15 @@
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
     <div class="navbar container mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4">
-
         <div class="flex-1">
-    <a href="../index.html" class="text-3xl font-[900] tracking-tighter text-[#1E293B] select-none inline-flex items-center">
-        M
-        <span class="relative inline-block">
-            i
-            <span class="absolute top-[-0.45em] left-0 w-full text-center text-[#FB923C] leading-[1] select-none">.</span>
-        </span>
-        <span class="text-[#FB923C]">o</span>
-        Deals
-    </a>
-</div>
+            <a href="../index.html" class="text-3xl font-[900] tracking-tighter text-[#1E293B] select-none inline-flex items-center">
+                M
+                <span class="relative inline-block">
+                    i<span class="absolute top-[-0.45em] left-0 w-full text-center text-[#FB923C] leading-[1]">.</span>
+                </span>
+                <span class="text-[#FB923C]">o</span> Deals
+            </a>
+        </div>
         
         <div class="flex-none w-full lg:w-1/2 max-w-xl">
             <div class="relative">
@@ -61,7 +50,7 @@
         </div>
 
         <div class="flex-1 hidden lg:flex justify-end text-slate-800">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8 cursor-pointer">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
         </div>
@@ -69,7 +58,7 @@
 
     <nav class="bg-white border-t border-b overflow-x-auto whitespace-nowrap">
         <div class="container mx-auto flex justify-center gap-2 py-3 px-4">
-            <a href="../alle/" class="btn btn-primary btn-sm rounded px-6 shadow-sm">Alle Deals</a>
+            <a href="../alle/" class="btn btn-sm rounded px-6 shadow-sm text-white border-none" style="background-color: #1E293B;">Alle Deals</a>
             <a href="../gaming/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Gaming</a>
             <a href="../kueche/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Küche</a>
             <a href="../technik/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Technik</a>
@@ -91,8 +80,7 @@
         </select>
     </div>
 
-    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8">
-        </div>
+    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8"></div>
 
     <div id="pagination" class="flex justify-center items-center gap-2 py-16"></div>
 </main>
