--- a/alle/index.html
+++ b/alle/index.html
@@ -30,7 +30,7 @@
 <body class="bg-base-200 min-h-screen flex flex-col font-sans">
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
-    <div class="navbar container mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4">
+    <div class="navbar mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4 w-full max-w-[1600px]">
         <div class="flex-1">
             
             <a href="../index.html" 
