--- a/alle/index.html
+++ b/alle/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="flex-1 hidden lg:flex justify-end text-slate-800">
+        <div class="hidden lg:flex justify-end text-slate-800">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
