--- a/alle/index.html
+++ b/alle/index.html
@@ -30,7 +30,7 @@
 <body class="bg-base-200 min-h-screen flex flex-col font-sans">
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
-    <div class="navbar mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4 w-full max-w-[1600px]">
+    <div class="navbar container mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4">
         <div class="flex-1">
             
             <a href="../index.html" 
@@ -44,7 +44,7 @@
 
         </div>
         
-        <div class="flex-1 w-full lg:w-2/3 xl:w-3/4 max-w-3xl">
+        <div class="flex-none w-full lg:w-1/2 max-w-xl">
             <div class="relative">
                 <input id="search-input" type="text" placeholder="Angebote durchsuchen..." 
                        class="input input-bordered w-full rounded-md bg-slate-50 focus:bg-white pr-12 h-12 border-slate-200" />
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="hidden lg:flex justify-end text-slate-800">
+        <div class="flex-1 hidden lg:flex justify-end text-slate-800">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
