--- a/alle/index.html
+++ b/alle/index.html
@@ -31,7 +31,7 @@
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
 
-    <!-- WICHTIG: container entfernt → volle Breite möglich -->
+    <!-- container entfernt → Suchleiste kann endlich breiter werden -->
     <div class="navbar mx-auto px-4 py-4 flex flex-col lg:flex-row gap-4 w-full max-w-[1600px]">
 
         <!-- LOGO – bleibt unverändert -->
