--- a/alle/index.html
+++ b/alle/index.html
@@ -46,11 +46,14 @@
             </a>
         </div>
 
-        <!-- SUCHLEISTE – Desktop breit, Mobile unverändert -->
+        <!-- SUCHLEISTE – Smartphone breiter & mittig, Desktop 900px -->
         <div class="flex-none w-full lg:w-[900px] lg:max-w-[900px]">
             <div class="relative">
                 <input id="search-input" type="text" placeholder="Angebote durchsuchen..." 
-                       class="input input-bordered w-full lg:w-[900px] lg:max-w-[900px] rounded-md bg-slate-50 focus:bg-white pr-12 h-12 border-slate-200" />
+                       class="input input-bordered 
+                              w-full max-w-[500px] mx-auto 
+                              lg:w-[900px] lg:max-w-[900px] 
+                              rounded-md bg-slate-50 focus:bg-white pr-12 h-12 border-slate-200" />
                 <div class="absolute right-4 top-1/2 -translate-y-1/2 text-slate-400 font-bold">⌕</div>
             </div>
         </div>
