--- a/alle/index.html
+++ b/alle/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="de" data-theme="miotheme">
+<html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MioDeals – Deine Deal-Plattform</title>
 
-    <!-- ZENTRALE FARBVARIABLEN -->
+    <!-- Zentrale Farbvariablen -->
     <style>
         :root {
             --mio-primary: #3A5CC4;
@@ -14,37 +14,47 @@
             --mio-light: #F8FAFC;
             --mio-white: #ffffff;
         }
+
+        .line-clamp-2 {
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+
+        .product-card {
+            transition: all 0.3s ease;
+        }
+
+        .product-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
+        }
     </style>
 
-    <!-- DaisyUI + Tailwind -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" />
+    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Tailwind-Konfiguration mit deinen Variablen -->
     <script>
         tailwind.config = {
-            daisyui: {
-                themes: [{
-                    miotheme: {
-                        "primary": "var(--mio-primary)",
-                        "secondary": "var(--mio-secondary)",
-                        "base-100": "var(--mio-white)",
-                        "base-200": "var(--mio-light)",
-                    },
-                }],
-            },
+            theme: {
+                extend: {
+                    colors: {
+                        mio: {
+                            primary: "var(--mio-primary)",
+                            secondary: "var(--mio-secondary)",
+                            dark: "var(--mio-dark)",
+                            light: "var(--mio-light)",
+                            white: "var(--mio-white)",
+                        }
+                    }
+                }
+            }
         }
     </script>
-
-    <style>
-        .line-clamp-2 { display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; }
-        .product-card { transition: all 0.3s ease; }
-        .product-card:hover { transform: translateY(-5px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1); }
-        .text-orange-mio { color: var(--mio-secondary); }
-    </style>
 </head>
 
-<body class="bg-base-200 min-h-screen flex flex-col font-sans">
+<body class="bg-mio-light min-h-screen flex flex-col font-sans">
 
 <header class="bg-white shadow-sm sticky top-0 z-50">
 
@@ -52,32 +62,32 @@
 
         <!-- LOGO -->
         <div class="flex-none">
-            <a href="../index.html" 
-                class="text-3xl lg:text-5xl font-[900] tracking-tighter text-[#1E293B] select-none inline-flex items-center">
+            <a href="../index.html"
+               class="text-3xl lg:text-5xl font-[900] tracking-tighter text-mio-dark select-none inline-flex items-center">
                 M
                 <span class="relative inline-block">
-                    i<span class="absolute top-[-0.45em] left-0 w-full text-center text-[var(--mio-secondary)] leading-[1]">.</span>
+                    i<span class="absolute top-[-0.45em] left-0 w-full text-center text-mio-secondary leading-[1]">.</span>
                 </span>
-                <span class="text-[var(--mio-secondary)]">o</span> Deals
+                <span class="text-mio-secondary">o</span> Deals
             </a>
         </div>
 
         <!-- SUCHLEISTE -->
-        <div class="flex-none w-full lg:w-[900px] lg:max-w-[900px]">
+        <div class="search-wrapper flex-none w-full lg:w-[900px] lg:max-w-[900px]">
             <div class="relative">
-                <input id="search-input" type="text" placeholder="Angebote durchsuchen..." 
-                       class="input input-bordered 
-                              w-full max-w-[500px] mx-auto 
-                              lg:w-[900px] lg:max-w-[900px] 
-                              rounded-md bg-slate-50 focus:bg-white pr-12 h-12 border-slate-200" />
+                <input id="search-input" type="text" placeholder="Angebote durchsuchen..."
+                       class="w-full h-12 px-4 pr-12 border border-slate-200 rounded-md bg-slate-50 
+                              focus:bg-white focus:outline-none focus:ring-2 focus:ring-mio-primary transition" />
                 <div class="absolute right-4 top-1/2 -translate-y-1/2 text-slate-400 font-bold">⌕</div>
             </div>
         </div>
 
         <!-- ICON -->
         <div class="flex-none hidden lg:flex justify-end text-slate-800">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-8 h-8">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                 stroke-width="2" stroke="currentColor" class="w-8 h-8">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
             </svg>
         </div>
 
@@ -86,21 +96,44 @@
     <!-- NAV -->
     <nav class="bg-white border-t border-b overflow-x-auto whitespace-nowrap">
         <div class="mx-auto flex justify-center gap-2 py-3 px-4 w-full">
-            <a href="../alle/" class="btn btn-sm rounded px-6 shadow-sm text-white border-none" style="background-color: var(--mio-dark);">Alle Deals</a>
-            <a href="../gaming/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Gaming</a>
-            <a href="../kueche/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Küche</a>
-            <a href="../technik/" class="btn btn-ghost btn-sm rounded px-6 text-slate-500 font-bold uppercase text-[10px] tracking-widest">Technik</a>
+
+            <!-- ACTIVE BUTTON -->
+            <a href="../alle/"
+               class="px-6 py-2 rounded text-white font-bold text-[10px] tracking-widest uppercase"
+               style="background-color: var(--mio-dark);">
+                Alle Deals
+            </a>
+
+            <!-- GHOST BUTTONS -->
+            <a href="../gaming/"
+               class="px-6 py-2 rounded text-slate-500 font-bold text-[10px] tracking-widest uppercase hover:text-mio-secondary transition">
+                Gaming
+            </a>
+
+            <a href="../kueche/"
+               class="px-6 py-2 rounded text-slate-500 font-bold text-[10px] tracking-widest uppercase hover:text-mio-secondary transition">
+                Küche
+            </a>
+
+            <a href="../technik/"
+               class="px-6 py-2 rounded text-slate-500 font-bold text-[10px] tracking-widest uppercase hover:text-mio-secondary transition">
+                Technik
+            </a>
+
         </div>
     </nav>
 </header>
 
 <main class="container mx-auto px-2 md:px-4 py-8 flex-grow">
+
     <div class="flex flex-col md:flex-row md:items-center justify-between mb-8 gap-4 px-2">
         <div class="flex items-center gap-2">
-            <div class="w-8 h-8 bg-[var(--mio-dark)] rounded flex items-center justify-center text-white font-bold text-xs">#</div>
+            <div class="w-8 h-8 bg-mio-dark rounded flex items-center justify-center text-white font-bold text-xs">#</div>
             <h1 class="text-2xl font-bold text-slate-800 tracking-tight uppercase">Angebote</h1>
         </div>
-        <select id="sort-select" class="select select-bordered select-sm rounded bg-white border-slate-200">
+
+        <select id="sort-select"
+                class="h-10 px-3 border border-slate-200 rounded-md bg-white text-sm focus:ring-2 focus:ring-mio-primary">
             <option value="empfohlen">Sortieren: Empfohlen</option>
             <option value="price-asc">Preis: Aufsteigend</option>
             <option value="price-desc">Preis: Absteigend</option>
@@ -108,7 +141,8 @@
         </select>
     </div>
 
-    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8"></div>
+    <div id="product-grid"
+         class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 md:gap-8"></div>
 
     <div id="pagination" class="flex justify-center items-center gap-2 py-16"></div>
 </main>
@@ -117,8 +151,8 @@
     <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
         <p class="text-sm text-slate-400 font-medium">© 2025 MioDeals – Alle Rechte vorbehalten</p>
         <div class="flex gap-10 text-sm font-bold text-slate-700">
-            <a href="../impressum.html" class="hover:text-orange-500 transition-colors">Impressum</a>
-            <a href="../datenschutz.html" class="hover:text-orange-500 transition-colors">Datenschutz</a>
+            <a href="../impressum.html" class="hover:text-mio-secondary transition">Impressum</a>
+            <a href="../datenschutz.html" class="hover:text-mio-secondary transition">Datenschutz</a>
         </div>
     </div>
 </footer>
