--- a/alle/index.html
+++ b/alle/index.html
@@ -31,39 +31,20 @@
             box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
         }
 
-        /* --------------------------------------------- */
-        /* DESKTOP HEADER OPTIMIERUNG (ab 1024px)        */
-        /* --------------------------------------------- */
+        /* ------------------------------------------------------ */
+        /* DESKTOP HEADER OPTIMIERUNG – LOGO AUSRICHTEN           */
+        /* ------------------------------------------------------ */
         @media (min-width: 1024px) {
 
-            /* Navbar bündig ausrichten */
+            /* Logo soll exakt dort starten, wo die Karten beginnen */
             .navbar {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding-left: 0 !important;
-                padding-right: 0 !important;
-                width: 100%;
+                padding-left: 1rem !important;  /* entspricht px-4 → 16px */
+                padding-right: 1rem !important;
             }
 
-            /* Logo links bündig */
+            /* Logo selbst bündig halten */
             .navbar > div:first-child {
                 margin-left: 0 !important;
-            }
-
-            /* Suchleiste exakt mittig */
-            .search-wrapper {
-                flex: 1;
-                max-width: 900px;
-                margin: 0 auto;
-            }
-
-            /* Menü-Icon rechts */
-            .navbar > div:last-child {
-                margin-right: 0 !important;
-                display: flex !important;
-                align-items: center;
-                justify-content: flex-end;
             }
         }
     </style>
