--- a/alle/index.html
+++ b/alle/index.html
@@ -9,7 +9,7 @@
         :root {
             --mio-primary: #6EA8FF;
             --mio-secondary: #FB923C;
-            --mio-dark: #1E293B;
+            --mio-dark: #2A3A52;
             --mio-light: #F8FAFC;
             --mio-white: #ffffff;
         }
