--- a/alle/index.html
+++ b/alle/index.html
@@ -62,7 +62,7 @@
                 lg:grid lg:grid-cols-3 lg:items-center">
 
         <!-- LOGO (links) -->
-        <div class="flex lg:justify-start">
+       <div class="flex justify-center lg:justify-start">
             <a href="../index.html" class="flex items-center">
                 <img src="../assets/Logo-MIODEALS-v2.png" alt="MioDeals Logo" class="h-12 lg:h-16 w-auto select-none">
             </a>
