--- a/alle/index.html
+++ b/alle/index.html
@@ -59,7 +59,7 @@
     <!-- DESKTOP: 3-Spalten-Layout für zentrierte Suchleiste -->
     <div class="navbar mx-auto px-4 py-4 w-full
                 flex flex-col gap-4
-                lg:grid lg:grid-cols-3 lg:items-center">
+                lg:grid lg:grid-cols-[1fr_2fr_1fr] lg:items-center">
 
         <!-- LOGO (links, mobil zentriert) -->
         <div class="flex justify-center lg:justify-start">
