--- a/alle/index.html
+++ b/alle/index.html
@@ -31,72 +31,42 @@
         }
 
         /* -----------------------------------------
-           VOLLFLÄCHIGES HORIZONTALES WASSERZEICHEN
+           VOLLFLÄCHIGES TEXT-WASSERZEICHEN
+           (ECHTER TEXT, ZEILE FÜR ZEILE)
         ----------------------------------------- */
-        body {
-            position: relative;
-        }
-
         body::before {
-            content: "";
+            content:
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A"
+                "MioDeals   MioDeals   MioDeals   MioDeals   MioDeals \A";
+
+            white-space: pre;
             position: fixed;
-            top: 0; /* GANZE SEITE */
+            top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             pointer-events: none;
             z-index: -1;
 
-            /* Wiederholtes Textmuster */
-            background-image:
-                repeating-linear-gradient(
-                    to bottom,
-                    rgba(0, 0, 0, 0.04) 0,
-                    rgba(0, 0, 0, 0.04) 1px,
-                    transparent 1px,
-                    transparent 60px
-                ),
-                repeating-linear-gradient(
-                    to right,
-                    transparent 0,
-                    transparent 100%
-                );
-
-            /* Text als Overlay */
-            mask-image: repeating-linear-gradient(
-                to bottom,
-                black 0 60px,
-                transparent 60px 60px
-            );
-
-            -webkit-mask-image: repeating-linear-gradient(
-                to bottom,
-                black 0 60px,
-                transparent 60px 60px
-            );
-
-            font-size: 1.4rem;
+            font-size: 1.1rem;
             font-weight: 900;
-            color: rgba(0, 0, 0, 0.04);
+            line-height: 42px;
+            color: rgba(0, 0, 0, 0.035);
 
-            /* Der Text selbst */
-            background-size: 100% 60px;
-            background-repeat: repeat-y;
-            background-position: 0 0;
-
-            /* Der eigentliche Text */
-            background-image:
-                repeating-linear-gradient(
-                    to bottom,
-                    transparent 0 60px
-                ),
-                url("data:image/svg+xml;utf8,
-                    <svg xmlns='http://www.w3.org/2000/svg' width='2000' height='60'>
-                        <text x='0' y='40' font-size='28' font-weight='900' fill='rgba(0,0,0,0.04)'>
-                            MioDeals   MioDeals   MioDeals   MioDeals   MioDeals   MioDeals
-                        </text>
-                    </svg>"
-                );
+            display: block;
         }
     </style>
 
